--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,7 @@
       <%= form_with model: @user, url: user_registration_path, id: 'new_user', class: 'new_user', local: true do |f| %>
         <%= render "devise/shared/error_messages", resource: resource %>
         <div class="field">
-          <%= f.label :name %><br />
+          <%= f.label :name %><br>
           <%= f.text_field :name, autofocus: true, class: "name" %>
         </div>
         <div class="field">
@@ -13,9 +13,25 @@
           <%= f.email_field :email, autofocus: true, class: "email" %>
         </div>
         <div class="field">
+            <%= f.label :postal_code %><br />
+            <%= f.text_field :postal_code, autocomplete: 'postcode', class: "postal_code", id:"user_postcode" %>
+        </div>
+        <div class="field">
+            <%= f.label :prefecture_code %><br>
+            <%= f.collection_select :prefecture_code, JpPrefecture::Prefecture.all, :code, :name, class: "address", id:"user_prefecture_code" %>
+        </div>
+        <div class="field">
+            <%= f.label :city %><br>
+            <%= f.text_field :address_city, autocomplete: 'address_city', class: "address", id:"user_address_city" %>
+        </div>
+        <div class="field">
+            <%= f.label :street %><br>
+            <%= f.text_field :address_street, autocomplete: 'address_street', class: "address", id:"user_address_street" %>
+        </div>
+        <div class="field">
           <%= f.label :password %>
           <% if @minimum_password_length %>
-          <em>(<%= @minimum_password_length %> characters minimum)</em>
+          <em><%= @minimum_password_length %> characters minimum</em>
           <% end %><br />
           <%= f.password_field :password, autocomplete: "off", class: "password" %>
         </div>
